--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -4,8 +4,10 @@
 .gallery{
     background-color: #FAFAFA;
     margin-bottom: 1rem;
+    padding-bottom: 1rem;
 
     &__h2{
+        padding-bottom: 0;
         @include demi-font;
         padding-top: 1rem;
         margin-left: 1rem;
@@ -31,9 +33,7 @@
             justify-content: space-evenly;
         }
         &-image{
-            height: 20vh;
             width: 100%;
-            margin-top: 1rem;
             @include tablet{
                 height: 15vh;
                 width: 30%;
